--- a/res/mobile.css
+++ b/res/mobile.css
@@ -311,13 +311,11 @@ div.titleImage div.triangle:last-of-type {
 /* index.html styles */
 div.shoutBox {
   width: calc(100% + 1em);
+  height: 31.25em;
+  background-size: cover;
+  background-position: center center;
   margin-left: -0.5em;
   position: relative;
-}
-div.shoutBox img.shoutImage {
-  width: 100%;
-  display: block;
-  min-height: 31.25em;
 }
 div.shoutBox div.imageCover {
   height: 100%;
